# AutoNOMOS_Stardust

./: AutoNOMOS_Stardust.project  AutoNOMOS_Stardust.workspace  PathFollowingSuccess.ods  README.md  Rango  default.rviz  pathFollowing0.csv  pathFollowing1.csv
.codelite/: AutoNOMOS_Stardust.session  refactoring.db
AutoNOMOS_simulation/: calculateRadius.m  evidenceMaxRadius.xlsx  test.txt
AutoNOMOS_simulation/src/autonomos_gazebo/launch/: empty_autonomous.launch  my_world.launch
AutoNOMOS_simulation/src/cylinder_keyboard/: CMakeLists.txt  package.xml
AutoNOMOS_simulation/src/cylinder_keyboard/include/keyboard/: keyboard.h
AutoNOMOS_simulation/src/cylinder_keyboard/src/: keyboard.cpp  main.cpp
AutoNOMOS_simulation/src/skycam/: CMakeLists.txt  package.xml
AutoNOMOS_simulation/src/skycam/config/: config.yaml
AutoNOMOS_simulation/src/skycam/include/skycam/: skycam.h
AutoNOMOS_simulation/src/skycam/launch/: skycam.launch
AutoNOMOS_simulation/src/skycam/src/: INTOCABLE.cpp  skycam_node.cpp  skycam_nodelet (3rd copy).cpp  skycam_nodelet (4th copy).cpp  skycam_nodelet (5th copy).cpp  skycam_nodelet (6th copy).cpp  skycam_nodelet (another copy).cpp  skycam_nodelet (copy).cpp  skycam_nodelet.cpp
AutoNOMOS_simulation/src/teclado/: CMakeLists.txt  package.xml
AutoNOMOS_simulation/src/teclado/include/teclado/: teclado.h
AutoNOMOS_simulation/src/teclado/src/: main.cpp  teclado.cpp
AutoNOMOS_simulation/src/tecladoCilindro/: CMakeLists.txt  package.xml
AutoNOMOS_simulation/src/using_markers/: CMakeLists.txt  package.xml
PathErrors/: getStatistics.m
PathErrors/Experiment1/: pathFollowing1.csv  pathFollowing10.csv  pathFollowing2.csv  pathFollowing3.csv  pathFollowing4.csv  pathFollowing6.csv  pathFollowing7.csv  pathFollowing8.csv  pathFollowing9.csv  statistics1.csv  statistics10.csv  statistics2.csv  statistics3.csv  statistics4.csv  statistics6.csv  statistics7.csv  statistics8.csv  statistics9.csv
PathErrors/Experiment2/: pathFollowing1.csv  pathFollowing10.csv  pathFollowing2.csv  pathFollowing3.csv  pathFollowing4.csv  pathFollowing5.csv  pathFollowing6.csv  pathFollowing7.csv  pathFollowing8.csv  pathFollowing9.csv  statistics1.csv  statistics10.csv  statistics2.csv  statistics3.csv  statistics4.csv  statistics5.csv  statistics6.csv  statistics7.csv  statistics8.csv  statistics9.csv
PathErrors/Experiment3/: pathFollowing1.csv  pathFollowing10.csv  pathFollowing2.csv  pathFollowing3.csv  pathFollowing7.csv  pathFollowing9.csv  statistics1.csv  statistics10.csv  statistics2.csv  statistics3.csv  statistics7.csv  statistics9.csv
(+12 files in other folders)
